# jax_fvm

./: .gitignore  README.md  pyproject.toml
examples/: Euler_example.ipynb  mesh.ipynb
src/Cases/: Test_Cases.py
src/mesh/: Mesh_cases.py  mesh.py  plot.py
src/solvers/: helper.py
src/solvers/Euler/: Euler.py  test.py
src/solvers/Vorticity_NS/: helpers.py  solver.py
src/solvers/compressible_NS/: solver.py
src/solvers/incompressible_NS/: solver.py
