[project]
name = "inria"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "flax>=0.8.5",
    "ipykernel>=6.31.0",
    "jax[cuda13]>=0.4.30",
    "matplotlib>=3.9.4",
    "meshio>=5.3.5",
    "meshpy>=2022.1.3",
    "optax>=0.2.4",
    "scikit-learn>=1.6.1",
]
